fix: better spacing for desktop nav

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,6 +8,11 @@
   border-bottom: 1px solid rgba(20, 29, 31, 0.2);
   width: 100%;
 
+  [aria-current] {
+    font-weight: 800;
+  }
+
+  /* mobile open styles  */
   &--open {
     @media (max-width: 767px) {
       animation: fadeBg 0.4s forwards;
@@ -45,9 +50,23 @@
 
   &__desktop-menu {
     display: none;
+    height: 100%;
 
     @media (min-width: 768px) {
       display: flex;
+    }
+
+    a {
+      font-size: 20px;
+      padding: 0 20px;
+      text-align: center;
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      &:first-of-type {
+        padding-left: 0;
+      }
     }
   }
 
@@ -62,10 +81,6 @@
 
     @media (min-width: 768px) {
       display: none;
-    }
-
-    [aria-current] {
-      font-weight: 800;
     }
 
     a {
